styles updated, background color for button set explicitly in attempt to correct rendering issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,9 @@ button {
   
   font-size: 24px;
   padding: 10px;
-  
+
+
+  background: white;
   border-radius: 8px;
   
   margin-left: auto;
